re PR middle-end/37014 (internal compiler error: in expand_expr_real_1, at expr.c:8760)

PR middle-end/37014
	* expr.c (expand_expr_real_1): Handle TRUTH_ANDIF_EXPR
	and TRUTH_ORIF_EXPR.
	* dojump.c (do_jump): Likewise.

	* gcc.c-torture/compile/20080812-1.c: New test.

From-SVN: r139029